<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardrone_sdk</name>
  <version>1.0.0</version>
  <description>Exports ARSDK3 as a library</description>
  <maintainer email="victor.talpaert@gmail.com">victor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>arsdk3</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
