<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardrone_sumo</name>
  <version>1.0.0</version>
  <description>Control the Parrot JumpingSumo drone via ROS2 topics</description>
  <maintainer email="victor.talpaert@gmail.com">victor</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>libopencv-dev</depend>
  <depend>cv_bridge</depend>
  <depend>ardrone_sdk</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
